--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Dancer2-Plugin-Minify
 
 {{$NEXT}}
+ - Compatibility for Dancer2::Plugin2
 
 0.001 2016-04-15
  - Initial release
